--- a/Zewen_v3 copy.ipynb
+++ b/Zewen_v3 copy.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'loadData'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcategory_encoders\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mce\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mloadData\u001b[39;00m \u001b[39mimport\u001b[39;00m LoadData\n\u001b[1;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mProcessData\u001b[39;00m \u001b[39mimport\u001b[39;00m ProcessingData\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'loadData'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -26,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,45 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "city                                     False\n",
-       "year                                     False\n",
-       "weekofyear                               False\n",
-       "week_start_date                          False\n",
-       "ndvi_ne                                  False\n",
-       "ndvi_nw                                  False\n",
-       "ndvi_se                                  False\n",
-       "ndvi_sw                                  False\n",
-       "precipitation_amt_mm                     False\n",
-       "reanalysis_air_temp_k                    False\n",
-       "reanalysis_avg_temp_k                    False\n",
-       "reanalysis_dew_point_temp_k              False\n",
-       "reanalysis_max_air_temp_k                False\n",
-       "reanalysis_min_air_temp_k                False\n",
-       "reanalysis_precip_amt_kg_per_m2          False\n",
-       "reanalysis_relative_humidity_percent     False\n",
-       "reanalysis_sat_precip_amt_mm             False\n",
-       "reanalysis_specific_humidity_g_per_kg    False\n",
-       "reanalysis_tdtr_k                        False\n",
-       "station_avg_temp_c                       False\n",
-       "station_diur_temp_rng_c                  False\n",
-       "station_max_temp_c                       False\n",
-       "station_min_temp_c                       False\n",
-       "station_precip_mm                        False\n",
-       "total_cases                              False\n",
-       "dtype: bool"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sj.isnull().any()"
    ]
@@ -104,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,13 +114,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "featuresDrop = ['week_start_date']\n",
     "fill_type = 'ffill'\n",
     "sj, iq = preprocess_data(df_train, featuresDrop, fill_type, split_city=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2,3]\n",
+    "b = [1,2,3]\n",
+    "c = a+b\n",
+    "c"
    ]
   }
  ],
